app/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: flask-app.keepcoding.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask
            port:
              number: 5000
